adjust tests and model structure
