# server/api/schedule-itens/router.js
@@ -1,8 +1,14 @@
 import * as express from 'express';
 
-export default controller =>
+const generateRoutes = controller =>
   express
     .Router()
     .post('/', (req, res) => controller.create(req, res))
     .get('/', (req, res) => controller.all(req, res))
-    .get('/:id', (req, res) => controller.byId(req, res));
+    .get('/:id', (req, res) => controller.byId(req, res))
+    .delete('/:id', (req, res) => controller.delete(req, res));
+
+const router = (app, controller) =>
+  app.use('/api/v1/scheduling/schedule-itens', generateRoutes(controller));
+
+export default router;
